--- a/website/pages/docs/validators/assert.mdx
+++ b/website/pages/docs/validators/assert.mdx
@@ -440,10 +440,10 @@ import { v4 } from "uuid";
 ]}>
   <Tab>
 ```typescript
-export function assertGuard<T>(input: T): asserts inut is T;
+export function assertGuard<T>(input: T): asserts input is T;
 export function assertGuard<T>(input: unknown): asserts input is T;
 
-export function assertGuardEquals<T>(input: T): asserts inut is T;
+export function assertGuardEquals<T>(input: T): asserts input is T;
 export function assertGuardEquals<T>(input: unknown): asserts input is T;
 ```
   </Tab>
