--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -288,6 +288,10 @@ For reference, there are a couple of ways to integrate `unplugin-typia` into you
 
 <Tabs items={['Vite', 'Next.js', 'esbuild', 'Bun.runtime', 'Bun.build']}>
   <Tab>
+  <Callout type="info">
+  You can use any plugins with [`unplugin-typia`](#unplugin-typia) in Vite (including [`@vitejs/plugin-react-swc`](https://github.com/vitejs/vite-plugin-react-swc)).
+  `unplugin-typia` process the TypeScript code before transforming it to JavaScript, so it can be used with any plugins.
+  </Callout>
 ```typescript filename="vite.config.ts" copy showLineNumbers
 import UnpluginTypia from '@ryoppippi/unplugin-typia/vite'
  
