docs(setup): correct a small grammar mistake

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -290,7 +290,7 @@ For reference, there are a couple of ways to integrate `unplugin-typia` into you
   <Tab>
   <Callout type="info">
   You can use any plugins with [`unplugin-typia`](#unplugin-typia) in Vite (including [`@vitejs/plugin-react-swc`](https://github.com/vitejs/vite-plugin-react-swc)).
-  `unplugin-typia` process the TypeScript code before transforming it to JavaScript, so it can be used with any plugins.
+  `unplugin-typia` processes the TypeScript code before transforming it to JavaScript, so it can be used with any plugins.
   </Callout>
 ```typescript filename="vite.config.ts" copy showLineNumbers
 import UnpluginTypia from '@ryoppippi/unplugin-typia/vite'
