feat(docs): setup for @ryoppippi/unplugin-typia

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -251,7 +251,9 @@ Currently, `unplugin-typia` supports the following bundlers:
 <Tabs items={['npm', 'pnpm', 'yarn', 'bun']}>
   <Tab>
 ```bash filename="Terminal" showLineNumbers copy
-npx jsr add -D @ryoppippi/unplugin-typia
+npx jsr add -D @ryoppippi/unplugin-typia # via jsr (recommended)
+# npm install -D @ryoppippi/unplugin-typia # via npm
+
 npm install --save typia
 npx typia setup
 ```
